# strix-gateway

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: vendor-conformance.yml
apollo_gateway/: __init__.py  config.py  main.py  server.py
apollo_gateway/api/: __init__.py  admin.py  arrays.py  subsystems.py  v1.py  vhost.py
apollo_gateway/cli/: __init__.py  client.py  errors.py  main.py  output.py
apollo_gateway/compat/: __init__.py
apollo_gateway/core/: __init__.py  arrays.py  capabilities.py  db.py  endpoints.py  faults.py  hosts.py  mappings.py  models.py  personas.py  pools.py  reconcile.py  services.py  volumes.py
apollo_gateway/middleware/: __init__.py  vhost.py
apollo_gateway/personalities/: base.py  capabilities.py  connection_info.py  errors.py
apollo_gateway/spdk/: __init__.py  ensure.py  iscsi.py  nvmf.py  rpc.py
apollo_gateway/tls/: __init__.py  manager.py  sni.py  vhost.py
apollo_gateway/topology/: __init__.py  apply.py  load.py  schema.py  validate.py
docker/: entrypoint.sh  sshd_config
docs/: snap-configuration.md  tls-vhost-multiplexing.md
docs/architecture/: compatibility-layer.md
docs/testing/: vendor_conformance.md
examples/capabilities/: generic_min.toml  ibm_svc_basic.yaml
examples/ci/: dual_subsystem.yaml  single_svc.yaml  topo-min.yaml  topo-multi-subsystem.yaml
scripts/: apollo-svc-shell  generate_e2e_matrix.py  strix-svc-shell  validate_vendors.py
scripts/lxd/: functional_test_lxd.sh  vm_consumer_test.sh  vm_vhost_test.sh
snap/: snapcraft.yaml
snap/hooks/: configure
snap/local/: apollo-gateway-wrapper  apollo-svc-shell  spdk-tgt-wrapper  strix-gateway-wrapper
strix_gateway/: __init__.py  config.py  main.py  server.py
strix_gateway/api/: admin.py  arrays.py  v1.py  vhost.py
strix_gateway/cli/: __init__.py  client.py  errors.py  main.py
tests/: __init__.py  conftest.py  vendors.yaml
(+173 files in other folders)
