[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apollo-gateway"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=7.0.0",
    "greenlet>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["apollo_gateway"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::pytest.PytestUnhandledThreadExceptionWarning"]

[tool.coverage.run]
source = ["apollo_gateway"]
branch = true
concurrency = ["greenlet", "thread"]

[tool.coverage.report]
show_missing = true
